--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <a href="http://atlanticbluecode.github.io/Projects/20161113-2 - Machine Learning Naves Seta/index.html" target="_blank"/>Machine Learning</a>
   <br></br>
   <a href="http://atlanticbluecode.github.io/Projects/20161113-1 - Nave Seta Controlada 3 Teclas (Melhorado)/index.html" target="_blank"/>Simple Ship</a>
+  <br></br>
+  <a href="http://atlanticbluecode.github.io/Projects/20161029-1 - Snake - 2 Bolas - 4 Teclas - Aceleracao/index.html" target="_blank"/>Snakes</a> 
 
 </body>
 
