--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
   <a href="http://atlanticbluecode.github.io/Projects/20161113-1 - Nave Seta Controlada 3 Teclas (Melhorado)/index.html" target="_blank"/>Simple Ship</a>
   <br></br>
   <a href="http://atlanticbluecode.github.io/Projects/20161029-1 - Snake - 2 Bolas - 4 Teclas - Aceleracao/index.html" target="_blank"/>Snakes</a> 
+  <br></br>
+  <a href="http://atlanticbluecode.github.io/Projects/20161029-1 - Slingshot Ball - Physics in Javascript/index.html" target="_blank"/>Slingshot Ball</a> 
+  <br></br>
+  <a href="http://atlanticbluecode.github.io/Projects/20161009-1 - 2 Naves Controladas 3 Teclas - Tiros Collision Detection Score/index.html" target="_blank"/>2 Naves Dogfight</a> 
+  <br></br>
+  <a href="http://atlanticbluecode.github.io/Projects/20161001-1 - Nave Graph Controlada 3 Teclas Avancos - Plataforma - Fuel - Explosao/index.html" target="_blank"/>Nave Plataforma</a> 
+
 
 </body>
 
