--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
  
  <p> Jogos </p>
   <br></br>
+  <a href="http://atlanticbluecode.github.io/Projects/20170129-1 - Nave Seta vs Asteroides/index.html" target="_blank"/>Asteroids</a> 
+  <br></br>
   <a href="http://atlanticbluecode.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" target="_blank"/>ISS Locator</a> 
   <br></br>
   <a href="http://atlanticbluecode.github.io/Projects/20161113-2 - Machine Learning Naves Seta/index.html" target="_blank"/>Machine Learning</a>
