--- a/20170129-1 - Nave Seta vs Asteroides/index.html
+++ b/20170129-1 - Nave Seta vs Asteroides/index.html
@@ -22,7 +22,9 @@
 
 <canvas id="canvas"></canvas>
 
-<script src="https://www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
+<script async defer src="http://ip-api.com/json/?callback=CountryFromIP"></script>
+
 <script type="text/javascript" src="highscores.js"></script>
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="vector.js"></script>
