--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
  
  <p> Jogos </p>
   <br></br>
+  <a href="http://atlanticbluecode.github.io/Projects/20170312-1 - Asteroids 2/index.html" target="_blank"/>Asteroids 2</a> 
+  <br></br>
   <a href="http://atlanticbluecode.github.io/Projects/20170129-1 - Nave Seta vs Asteroides/index.html" target="_blank"/>Asteroids</a> 
   <br></br>
   <a href="http://atlanticbluecode.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" target="_blank"/>ISS Locator</a> 
