--- a/20170312-1 - Asteroids 2/index.html
+++ b/20170312-1 - Asteroids 2/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8"/>
 	<title>Asteroids</title>
 
 	<style type="text/css">
 	html, body {
 		margin: 0px;
+		background: url(Assets/menu/MenuSpaceBackground-Small.jpg) no-repeat center center fixed;
+		background-size: cover;
 	}
 
 	canvas {
@@ -13,49 +16,9 @@
 	}
 
 	</style>
-
-	<style type="text/css">
-	html{
-		background: url(Assets/menu/MenuSpaceBackground-Small.jpg) no-repeat center center fixed;
-		background-size: cover;
-	}
-	</style>
 </head>
 
 <body>
-<!--
-
-<form class="form-style-space">
-<ul>
-<li>
-    <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
-    <input type="email" name="field2" class="field-style field-split align-right" placeholder="Email" />
-</li>
-<li>
-    <input type="text" name="field3" class="field-style field-split align-left" placeholder="Phone" />
-    <input type="url" name="field4" class="field-style field-split align-right" placeholder="Website" />
-</li>
-<li>
-<input type="text" name="field3" class="field-style field-full align-none" placeholder="Subject" />
-</li>
-<li>
-<textarea name="field5" class="field-style" placeholder="Message"></textarea>
-</li>
-<li>
-<input type="submit" value="Submit" />
-</li>
-</ul>
-</form>
-
-<link rel="stylesheet" type="text/css" href="style.css">
-
-<input type="text" name="Enter Player Name" class="enter" value="" id="Player"/>
-<input type="button" value="click" OnClick="startGame()"/>
--->
-
-<!--O elemento "canvas"" tem que ser criado no HTML antes do "script" ser criado/corrido-->
-<!--Desta forma quando o "script" correr o canvas já lá está disponível-->
-<!--Todos devem ficar dentro do Body-->
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
