--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <p>Projectos em Desenvolvimento</p>
 
 <br></br>
-<a href="http://atlanticbluecode.github.io/Projects/20170805-1- HTML CSS Portfolio Page/index.html" target="_blank"/>ABC Portfolio Page - FreeCodeCamp</a> 
+<a href="http://atlanticbluecode.github.io/Projects/20170805-1 - HTML CSS Portfolio Page/index.html" target="_blank"/>ABC Portfolio Page - FreeCodeCamp</a> 
 <br></br>
-<a href="http://atlanticbluecode.github.io/Projects/20170803-HTML CSS Isaac Newton Tribute Page/index.html" target="_blank"/>Isaac Newton Tribute Page - FreeCodeCamp</a> 
+<a href="http://atlanticbluecode.github.io/Projects/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html" target="_blank"/>Isaac Newton Tribute Page - FreeCodeCamp</a> 
 <br></br>
 <a href="http://atlanticbluecode.github.io/Projects/20170617-1 - Pista 2 Carros/index.html" target="_blank"/>Carros</a> 
 <br></br>
