--- a/20170805-1 - HTML CSS Portfolio Page/index.html
+++ b/20170805-1 - HTML CSS Portfolio Page/index.html
@@ -2,13 +2,16 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
 
   <title>ABC Portfolio Page</title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0">  
   <meta name="description" content="ABC Portfolio Page">
   <meta name="JNG" content="ABC Portfolio">
 
   <link rel="stylesheet" href="styles.css">
+  
 </head>
 
 <body class="site">
