--- a/20170805-1 - HTML CSS Portfolio Page/backup/index.html
+++ b/20170805-1 - HTML CSS Portfolio Page/backup/index.html
@@ -19,10 +19,10 @@
   <div id="header" class="header">
     <div id="siteName" class="siteName">Atlantic Blue Code</div>
     <div id="navbar" class="navbar">
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('home')-80, left: 0, behavior: 'smooth' });">Home</a>
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('portfolio')-80, left: 0, behavior: 'smooth' });">Portfolio</a>
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('contact')-80, left: 0, behavior: 'smooth' });">Contact</a>
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('about')-80, left: 0, behavior: 'smooth' });">About</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('home'), left: 0, behavior: 'smooth' });">Home</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('portfolio'), left: 0, behavior: 'smooth' });">Portfolio</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('contact'), left: 0, behavior: 'smooth' });">Contact</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('about'), left: 0, behavior: 'smooth' });">About</a>
     </div>
   </div>
 
