Ajustes alinhamento Grid

--- a/20170805-1 - HTML CSS Portfolio Page/backup2/index.html
+++ b/20170805-1 - HTML CSS Portfolio Page/backup2/index.html
@@ -38,27 +38,12 @@
     </div>
     <div id="portfolio" class="portfolio">
       <h1>Portfolio</h1>
-      <div class="Projects_Boxes">
-        <div class="Sub_Projects_Boxes">
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-        </div>
-        <div class="Sub_Projects_Boxes">
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-        </div>
-        <div class="Sub_Projects_Boxes">
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-        </div>
-      </div>
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque penatibus et magnis dis parturient
+      montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra quis sem eu, molestie pretium tellus.
+      Cras sit amet sagittis justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque
+      penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra
+      quis sem eu, molestie pretium tellus. Cras sit amet sagittis justo.</p>
     </div>
     <div id="contact" class="contact">
       <h1>Contact</h1>
