--- a/20170805-1 - HTML CSS Portfolio Page/backup3/index.html
+++ b/20170805-1 - HTML CSS Portfolio Page/backup3/index.html
@@ -38,26 +38,16 @@
     </div>
     <div id="portfolio" class="portfolio">
       <h1>Portfolio</h1>
-      <div class="Projects_Boxes">
-        <div class="Sub_Projects_Boxes">
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-        </div>
-        <div class="Sub_Projects_Boxes">
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-        </div>
-        <div class="Sub_Projects_Boxes">
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-          <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
-        </div>
+        <div class="portfolio_boxes">
+        <div class="box">Lorem ipsum dolor sit amet</div>
+        <div class="box">Consectetur adipiscing elit</div>
+        <div class="box">Duis ut lectus nec lacus porttitor egestas</div>
+        <div class="box">Aenean non felis lacinia</div>
+        <div class="box">Dictum libero eget</div>
+        <div class="box">Auctor nulla</div>
+        <div class="box">Mauris sit amet semper neque</div>
+        <div class="box">Orci varius natoque penatibus et magnis dis parturient</div>
+        <div class="box">Vestibulum maximus bibendum libero eu imperdiet</div>
       </div>
     </div>
     <div id="contact" class="contact">
