Mudança de nome

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>ABC Projects</title>
+  <title>Xirib Projects</title>
 	<meta charset="utf-8"/>
   <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp2/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Atlantic Blue Code</h1>
+  <h1>Xirib</h1>
   <h2>Coding Projects</h2>
 
 <br></br>
