--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <title>Xirib Portfolio Page</title>
+  <title>Xirib</title>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">  
   <meta name="description" content="Xirib Portfolio Page">
@@ -15,10 +15,10 @@
   <div id="header" class="header">
     <div id="siteName" class="siteName">Xirib</div>
     <div id="navbar" class="navbar">
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('home')-80, left: 0, behavior: 'smooth' });">Home</a>
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('portfolio')-80, left: 0, behavior: 'smooth' });">Portfolio</a>
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('contact')-80, left: 0, behavior: 'smooth' });">Contact</a>
-      <a onclick="window.scrollBy({ top: ElementIdCoordY ('about')-80, left: 0, behavior: 'smooth' });">About</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('home')-81, left: 0, behavior: 'smooth' });">Home</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('portfolio')-81, left: 0, behavior: 'smooth' });">Portfolio</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('contact')-81, left: 0, behavior: 'smooth' });">Contact</a>
+      <a onclick="window.scrollBy({ top: ElementIdCoordY ('about')-81, left: 0, behavior: 'smooth' });">About</a>
     </div>
   </div>
 
@@ -28,7 +28,7 @@
       <p>Welcome to my Portfolio website.
       <br>This was developed as a project for the FreeCodeCamp Front End Certification Programme.
       <br>As most other FreeCodeCamp students, I also took this opportunity to create a showcase for my own learning projects.
-      <br>I started learning to code on my spare time in late 2015 and have since developed some knowledge of Javascript, HTML and CSS.
+      <br>I started learning to code in my spare time in late 2015 and have since developed some knowledge of Javascript, HTML and CSS.
       <br>This page makes heavy use of the CSS Grid Layout launched in early 2017.
       <br>
       <br><i>August 2017</i></p>
@@ -106,14 +106,14 @@
             class="project_box"
             href="http://xirib.github.io/Projects/20170805-1 - HTML CSS Portfolio Page/index.html" 
             target="_blank">
-            Portfolio Page<br>-</br>FreeCodeCamp Project<br>2017-08</br>
+            Portfolio Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
 
             <a 
             class="project_box"
             href="http://xirib.github.io/Projects/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html"
             target="_blank">
-            Tribute Page (A FreeCodeCamp Project)<br>-</br>Isaac Newton<br>2017-08</br>
+            Tribute Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
 
           </div>
