--- a/index.html
+++ b/index.html
@@ -163,21 +163,13 @@
     </div>
     <div id="contact" class="contact">
       <h1>Contact</h1>
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque penatibus et magnis dis parturient
-      montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra quis sem eu, molestie pretium tellus.
-      Cras sit amet sagittis justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra
-      quis sem eu, molestie pretium tellus. Cras sit amet sagittis justo.</p>
+      <a href="mailto:jose.goncalves.pt@gmail.com">jose.goncalves.pt@gmail.com</a>
+      <br></br><br></br>
     </div>
     <div id="about" class="about">
       <h1>About</h1>
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque penatibus et magnis dis parturient
-      montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra quis sem eu, molestie pretium tellus.
-      Cras sit amet sagittis justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra
-        quis sem eu, molestie pretium tellus. Cras sit amet sagittis justo.</p>
+      <a href="http://www.freecodecamp.com" target="_blank" id="FCC_Link">Free Code Camp</a>
+      <br></br><br></br>      
     </div>
     <div id="empty" class="empty"></div>
   </div>
