--- a/index.html
+++ b/index.html
@@ -42,56 +42,56 @@
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170617-1 - Pista 2 Carros/index.html" 
+            href="http://sefari.github.io/Projects/20170617-1 - Pista 2 Carros/index.html" 
             target="_blank">
             Cars<br>-</br>A Car Racing Game For 2-Players<br>-</br>(2017-06)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170226-1 - Fadas Flores/index.html" 
+            href="http://sefari.github.io/Projects/20170226-1 - Fadas Flores/index.html" 
             target="_blank">
             Fada Flores<br>-</br>A Fairy Hops On Clouds<br>-</br>(2017-02)
             </a>
             
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170312-1 - Asteroids 2/index.html" 
+            href="http://sefari.github.io/Projects/20170312-1 - Asteroids 2/index.html" 
             target="_blank">
             Asteroids<br>-</br>Remake Of The Classic Shooter<br>-</br>(2017-03)
             </a>
             
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" 
+            href="http://sefari.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" 
             target="_blank">
             ISS Locator<br>-</br>Locates ISS Live<br>-</br>(2016-12)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161113-2 - Machine Learning Naves Seta/index.html" 
+            href="http://sefari.github.io/Projects/20161113-2 - Machine Learning Naves Seta/index.html" 
             target="_blank">
             Machine Learning<br>-</br>A Machine Learning Genetic Algorithm Experiment<br>-</br>(2016-11)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161029-1 - Snake - 2 Bolas - 4 Teclas - Aceleracao/index.html" 
+            href="http://sefari.github.io/Projects/20161029-1 - Snake - 2 Bolas - 4 Teclas - Aceleracao/index.html" 
             target="_blank">
             Snakes Advanced<br>-</br>The Classic Snake Game Re-Imagined<br>-</br>(2016-10)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161009-1 - 2 Naves Controladas 3 Teclas - Tiros Collision Detection Score/index.html" 
+            href="http://sefari.github.io/Projects/20161009-1 - 2 Naves Controladas 3 Teclas - Tiros Collision Detection Score/index.html" 
             target="_blank">
             Space Dogfight<br>-</br>2 Spacships Clash In Space<br>-</br>(2016-10)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161001-1 - Nave Graph Controlada 3 Teclas Avancos - Plataforma - Fuel - Explosao/index.html" 
+            href="http://sefari.github.io/Projects/20161001-1 - Nave Graph Controlada 3 Teclas Avancos - Plataforma - Fuel - Explosao/index.html" 
             target="_blank">
             Space X Lander<br>-</br>Try To Land This Falcon<br>-</br>(2016-10)
             </a>
@@ -104,14 +104,14 @@
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170805-1 - HTML CSS Portfolio Page/index.html" 
+            href="http://sefari.github.io/Projects/20170805-1 - HTML CSS Portfolio Page/index.html" 
             target="_blank">
             Portfolio Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html"
+            href="http://sefari.github.io/Projects/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html"
             target="_blank">
             Tribute Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
