--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 
 <html lang="en">
 <head>
-  <title>Xirib</title>
+  <title>Sefari</title>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">  
-  <meta name="description" content="Xirib Portfolio Page">
-  <meta name="name" content="Xirib Portfolio">
+  <meta name="description" content="Sefari Portfolio Page">
+  <meta name="name" content="Sefari Portfolio">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="site">
 
   <div id="header" class="header">
-    <div id="siteName" class="siteName">Xirib</div>
+    <div id="siteName" class="siteName">Sefari</div>
     <div id="navbar" class="navbar">
       <a onclick="window.scrollBy({ top: ElementIdCoordY ('home')-81, left: 0, behavior: 'smooth' });">Home</a>
       <a onclick="window.scrollBy({ top: ElementIdCoordY ('portfolio')-81, left: 0, behavior: 'smooth' });">Portfolio</a>
