Index with Clock

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
             <a 
             class="project_box"
-            href="http://wesfar.github.io/Projects/20170617-1 - Pista 2 Carros/index.html" 
+            href="http://wesfar.github.io/Projects/20170920-1 - Clock/index.html" 
             target="_blank">
-            Cars<br>-</br>A Car Racing Game For 2-Players<br>-</br>(2017-06)
+            Clock<br>-</br>A Simple Stylish Clock<br>-</br>(2017-09)
             </a>
 
             <a 
@@ -168,7 +168,7 @@
     </div>
     <div id="about" class="about">
       <h1>About</h1>
-      <a href="http://www.freecodecamp.com" target="_blank" id="FCC_Link">Free Code Camp</a>
+      <p>Some text About this site<a>
       <br></br><br></br>      
     </div>
     <div id="empty" class="empty"></div>
