Portfolio page maps to self

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <a 
             class="project_box"
-            href="http://wesfar.github.io/Projects/20170805-1 - HTML CSS Portfolio Page/index.html" 
+            href="http://wesfar.github.io/Projects/index.html" 
             target="_blank">
             Portfolio Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
