Added Traversy Media

--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
             Coding Math
             </a>
 
+            <a 
+            class="project_box"
+            href="http://www.traversymedia.com/"
+            target="_blank">
+            Traversy Media
+            </a>
+
           </div>
         </div>
       </div>
