Added Submarine Hunter

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
             <a 
             class="project_box"
+            href="http://wesfar.github.io/Projects/20170923-1 - Submarine Hunter/index.html" 
+            target="_blank">
+            Sub Hunter<br>-</br>Classic Submarine Hunter<br>-</br>(2017-09)
+            </a>
+
+            <a 
+            class="project_box"
             href="http://wesfar.github.io/Projects/20170920-1 - Clock/index.html" 
             target="_blank">
             Clock<br>-</br>A Simple Stylish Clock<br>-</br>(2017-09)
