--- a/20170923-1 - Submarine Hunter/index.html
+++ b/20170923-1 - Submarine Hunter/index.html
@@ -7,6 +7,21 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<style type="text/css">
+	html, body {
+		margin: 0px;
+		background-size: cover;
+	}
+
+	canvas {
+		display: block;
+		position: absolute;
+		top: 0px;
+		left: 0px;
+	}
+
+	</style>
+
 <title>Sub Hunter</title>
 
 </head>
@@ -15,11 +30,19 @@
 <body>
 
 <style> body {padding: 0; margin: 0;} </style>
-  
+
+<canvas id="canvasExplosion"></canvas>
+<canvas id="canvasSea"></canvas>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-<script src="submarine.js"></script>
+
+<script src="utils.js"></script>
+<script src="vector.js"></script>
+<script src="keycontrols.js"></script>
 <script src="boat.js"></script>
 <script src="mine.js"></script>
+<script src="submarine.js"></script>
 <script src="script.js"></script>
 
 </body>
