Sub Hunter Upgraded

--- a/20170923-1 - Submarine Hunter/index.html
+++ b/20170923-1 - Submarine Hunter/index.html
@@ -31,18 +31,21 @@
 
 <style> body {padding: 0; margin: 0;} </style>
 
-<canvas id="canvasExplosion"></canvas>
 <canvas id="canvasSea"></canvas>
+<canvas id="canvasExplosion"></canvas>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
 
+
 <script src="utils.js"></script>
 <script src="vector.js"></script>
+<script src="reloader.js"></script>
 <script src="keycontrols.js"></script>
 <script src="boat.js"></script>
 <script src="mine.js"></script>
 <script src="submarine.js"></script>
+<script src="explosion.js"></script>
 <script src="script.js"></script>
 
 </body>
