--- a/20170805-1 - HTML CSS Portfolio Page/index.html
+++ b/20170805-1 - HTML CSS Portfolio Page/index.html
@@ -2,18 +2,18 @@
 
 <html lang="en">
 <head>
-  <title>Xirib</title>
+  <title>Wesfar</title>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">  
-  <meta name="description" content="Xirib Portfolio Page">
-  <meta name="name" content="Xirib Portfolio">
+  <meta name="description" content="Wesfar Portfolio Page">
+  <meta name="name" content="Wesfar Portfolio">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="site">
 
   <div id="header" class="header">
-    <div id="siteName" class="siteName">Xirib</div>
+    <div id="siteName" class="siteName">Wesfar</div>
     <div id="navbar" class="navbar">
       <a onclick="window.scrollBy({ top: ElementIdCoordY ('home')-81, left: 0, behavior: 'smooth' });">Home</a>
       <a onclick="window.scrollBy({ top: ElementIdCoordY ('portfolio')-81, left: 0, behavior: 'smooth' });">Portfolio</a>
@@ -42,56 +42,63 @@
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170617-1 - Pista 2 Carros/index.html" 
+            href="http://wesfar.github.io/Projects/20170923-1 - Submarine Hunter/index.html" 
             target="_blank">
-            Cars<br>-</br>A Car Racing Game For 2-Players<br>-</br>(2017-06)
+            Sub Hunter<br>-</br>Classic Submarine Hunter<br>-</br>(2017-09)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170226-1 - Fadas Flores/index.html" 
+            href="http://wesfar.github.io/Projects/20170920-1 - Clock/index.html" 
+            target="_blank">
+            Clock<br>-</br>A Simple Stylish Clock<br>-</br>(2017-09)
+            </a>
+
+            <a 
+            class="project_box"
+            href="http://wesfar.github.io/Projects/20170226-1 - Fadas Flores/index.html" 
             target="_blank">
             Fada Flores<br>-</br>A Fairy Hops On Clouds<br>-</br>(2017-02)
             </a>
             
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170312-1 - Asteroids 2/index.html" 
+            href="http://wesfar.github.io/Projects/20170312-1 - Asteroids 2/index.html" 
             target="_blank">
             Asteroids<br>-</br>Remake Of The Classic Shooter<br>-</br>(2017-03)
             </a>
             
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" 
+            href="http://wesfar.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" 
             target="_blank">
             ISS Locator<br>-</br>Locates ISS Live<br>-</br>(2016-12)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161113-2 - Machine Learning Naves Seta/index.html" 
+            href="http://wesfar.github.io/Projects/20161113-2 - Machine Learning Naves Seta/index.html" 
             target="_blank">
             Machine Learning<br>-</br>A Machine Learning Genetic Algorithm Experiment<br>-</br>(2016-11)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161029-1 - Snake - 2 Bolas - 4 Teclas - Aceleracao/index.html" 
+            href="http://wesfar.github.io/Projects/20161029-1 - Snake - 2 Bolas - 4 Teclas - Aceleracao/index.html" 
             target="_blank">
             Snakes Advanced<br>-</br>The Classic Snake Game Re-Imagined<br>-</br>(2016-10)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161009-1 - 2 Naves Controladas 3 Teclas - Tiros Collision Detection Score/index.html" 
+            href="http://wesfar.github.io/Projects/20161009-1 - 2 Naves Controladas 3 Teclas - Tiros Collision Detection Score/index.html" 
             target="_blank">
             Space Dogfight<br>-</br>2 Spacships Clash In Space<br>-</br>(2016-10)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20161001-1 - Nave Graph Controlada 3 Teclas Avancos - Plataforma - Fuel - Explosao/index.html" 
+            href="http://wesfar.github.io/Projects/20161001-1 - Nave Graph Controlada 3 Teclas Avancos - Plataforma - Fuel - Explosao/index.html" 
             target="_blank">
             Space X Lander<br>-</br>Try To Land This Falcon<br>-</br>(2016-10)
             </a>
@@ -104,14 +111,14 @@
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170805-1 - HTML CSS Portfolio Page/index.html" 
+            href="http://wesfar.github.io/Projects/index.html" 
             target="_blank">
             Portfolio Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
 
             <a 
             class="project_box"
-            href="http://xirib.github.io/Projects/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html"
+            href="http://wesfar.github.io/Projects/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html"
             target="_blank">
             Tribute Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
@@ -157,27 +164,26 @@
             Coding Math
             </a>
 
+            <a 
+            class="project_box"
+            href="http://www.traversymedia.com/"
+            target="_blank">
+            Traversy Media
+            </a>
+
           </div>
         </div>
       </div>
     </div>
     <div id="contact" class="contact">
       <h1>Contact</h1>
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque penatibus et magnis dis parturient
-      montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra quis sem eu, molestie pretium tellus.
-      Cras sit amet sagittis justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra
-      quis sem eu, molestie pretium tellus. Cras sit amet sagittis justo.</p>
+      <a href="mailto:jose.goncalves.pt@gmail.com">jose.goncalves.pt@gmail.com</a>
+      <br></br><br></br>
     </div>
     <div id="about" class="about">
       <h1>About</h1>
-      <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque penatibus et magnis dis parturient
-      montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra quis sem eu, molestie pretium tellus.
-      Cras sit amet sagittis justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lectus nec lacus porttitor egestas. Aenean non felis lacinia, dictum libero eget, auctor nulla.<br><br>Mauris sit amet semper neque. Orci varius natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis lobortis velit ac aliquet aliquam. Vestibulum maximus bibendum libero eu imperdiet.<br><br>Fusce sit amet diam porta, vehicula ex eget, auctor metus. Sed ante diam, pharetra
-        quis sem eu, molestie pretium tellus. Cras sit amet sagittis justo.</p>
+      <p>Some text About this site<a>
+      <br></br><br></br>      
     </div>
     <div id="empty" class="empty"></div>
   </div>
