Update Newton to Wesfar

--- a/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html
+++ b/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html
@@ -29,7 +29,7 @@
       <a rel="nofollow" rel="noreferrer"href="https://en.wikipedia.org/wiki/Isaac_Newton">Wikipedia - Isaac Newton</a>
     </div>
     <div class="footer">
-      <h3>ATLANTIC BLUE CODE</h3>
+      <h3>WESFAR CODE</h3>
       <p>This Tribute Page was developed by Jose Novais Goncalves as a Freecodecamp Project</p>
       <p>Learn more about Freecodecamp: <a rel="nofollow" rel="noreferrer"href="https://www.freecodecamp.org">FreeCodeCamp</a></p>
 
