--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <a 
             class="project_box"
-            href="http://wesfar.github.io/Projects/20170923-1 - Submarine Hunter/index.html" 
+            href="http://wesfar.github.io/Projects/20170923-1 - Submarine Hunter/index.html"            onclick="fullscreen" 
             target="_blank">
             Sub Hunter<br>-</br>Classic Submarine Hunter<br>-</br>(2017-09)
             </a>
