--- a/20170923-1 - Submarine Hunter/index.html
+++ b/20170923-1 - Submarine Hunter/index.html
@@ -7,6 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <style type="text/css">
 	html, body {
