Full Window Attempts

--- a/index[Conflict].html
+++ b/index[Conflict].html
@@ -43,10 +43,9 @@
             class="project_box"
             onclick='
             window.open(
-            "http://wesfar.github.io/Projects//20170923-1 - Submarine Hunter/index.html",
+            "./20170923-1 - Submarine Hunter/index.html",
             "_blank",
-            "width="+window.outerWidth+",height="+window.outerHeight+""
-            );
+            "toolbar=no,scrollbars=yes,resizable=yes,top=500,left=500,width=400,height=400");
             '>
             Sub Hunter<br>-</br>Classic Submarine Hunter<br>-</br>(2017-09)
             </a>
