--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             class="project_box"
             onclick='
             window.open(
-            "http://wesfar.github.io/Projects//20170923-1 - Submarine Hunter/index.html",
+            "http://wesfar.github.io/Projects/20170923-1 - Submarine Hunter/index.html",
             "_blank",
             "width="+window.outerWidth+",height="+window.outerHeight+""
             );
