--- a/20170923-1 - Submarine Hunter/Backup/index.html
+++ b/20170923-1 - Submarine Hunter/Backup/index.html
@@ -36,7 +36,8 @@
 <canvas id="canvasExplosion"></canvas>
 
 
-<script src="landscape.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+
 <script src="utils.js"></script>
 <script src="vector.js"></script>
 <script src="reloader.js"></script>
