New Project with Touch Lines

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
 
             <a 
             class="project_box"
+            onclick='
+            window.open(
+            "http://wesfar.github.io/Projects/20171101-1 - Touch Effects/index.html",
+            "_blank",
+            "width="+window.innerWidth+",height="+window.innerHeight+""
+            );
+            '>
+            Touch Line<br>-</br>Experimental Touch Line<br>-</br>(2017-09)
+            </a>
+
+            <a 
+            class="project_box"
             href="http://wesfar.github.io/Projects/20170920-1 - Clock/index.html" 
             target="_blank">
             Clock<br>-</br>A Simple Stylish Clock<br>-</br>(2017-09)
