--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
             class="project_box"
             onclick='
             window.open(
+            "http://wesfar.github.io/Projects/20171112-1 - Spring Experiments/index.html",
+            "_blank",
+            "width="+window.innerWidth+",height="+window.innerHeight+""
+            );
+            '>
+            Spring Experiments<br>-</br>Experimental Touch Spring<br>-</br>(2017-11)
+            </a>
+
+            <a 
+            class="project_box"
+            onclick='
+            window.open(
             "http://wesfar.github.io/Projects/20170923-1 - Submarine Hunter/index.html",
             "_blank",
             "width="+window.outerWidth+",height="+window.outerHeight+""
