--- a/20171112-1 - Spring Experiments/index.html
+++ b/20171112-1 - Spring Experiments/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	
 
@@ -26,10 +26,8 @@
 </head>
 <body>
 
-<!--O elemento "canvas"" tem que ser criado no HTML antes do "script" ser criado/corrido-->
-<!--Desta forma quando o "script" correr o canvas já lá está disponível-->
-<!--Todos devem ficar dentro do Body-->
-
+<style> body {padding: 0; margin: 0;} </style>
+	
 <canvas id="canvas"></canvas>
 
 <script type="text/javascript" src="vector.js"></script>
