--- a/20171112-1 - Spring Experiments/index.html
+++ b/20171112-1 - Spring Experiments/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Spring Experiments</title>
 
@@ -8,32 +9,32 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	
-
 	<style type="text/css">
-	html, body {
-		margin: 0px;
-		background-size: cover;
-	}
+		html, body {
+			margin: 0px;
+			background-size: cover;
+		}
 
-	canvas {
-		display: block;
-		position: absolute;
-		top: 0px;
-		left: 0px;
-	}
-
+		canvas {
+			display: block;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+		}
 	</style>
 </head>
+
 <body>
 
-<style> body {padding: 0; margin: 0;} </style>
-	
-<canvas id="canvas"></canvas>
+	<style> body {padding: 0; margin: 0;} </style>
+		
+	<canvas id="canvas"></canvas>
 
-<script type="text/javascript" src="vector.js"></script>
-<script type="text/javascript" src="particle.js"></script>
-<script type="text/javascript" src="utils.js"></script>
-<script type="text/javascript" src="script.js"></script>
+	<script src="vector.js"></script>
+	<script src="particle.js"></script>
+	<script src="utils.js"></script>
+	<script src="script.js"></script>
 
 </body>
+
 </html>
