--- a/20171112-1 - Spring Experiments/index.html
+++ b/20171112-1 - Spring Experiments/index.html
@@ -8,28 +8,23 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	
-	<style type="text/css">
-		html, body {
-			margin: 0px;
-			background-size: cover;
-		}
 
-		canvas {
-			display: block;
-			position: absolute;
-			top: 0px;
-			left: 0px;
-		}
-	</style>
+	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
-
-	<style> body {padding: 0; margin: 0;} </style>
-		
 	<canvas id="canvas"></canvas>
 
+<!--
+	<div id="slidecontainer">
+		<input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+		<p>Value: <span id="demo"></span></p>
+	</div>
+!-->
+
+	
+	
 	<script src="vector.js"></script>
 	<script src="particle.js"></script>
 	<script src="utils.js"></script>
