--- a/index - Copy.html
+++ b/index - Copy.html
@@ -43,9 +43,34 @@
             class="project_box"
             onclick='
             window.open(
-            "./20170923-1 - Submarine Hunter/index.html",
+            "http://wesfar.github.io/Projects/20171112-1 - Spring Experiments/index.html",
             "_blank",
-            "toolbar=no,scrollbars=yes,resizable=yes,top=500,left=500,width=400,height=400");
+            "width="+window.innerWidth+",height="+window.innerHeight+""
+            );
+            '>
+            Spring Experiments<br>-</br>Experimental Touch Spring<br>-</br>(2017-11)
+            </a>
+
+            <a 
+            class="project_box"
+            onclick='
+            window.open(
+            "http://wesfar.github.io/Projects/20171101-1 - Touch Effects/index.html",
+            "_blank",
+            "width="+window.innerWidth+",height="+window.innerHeight+""
+            );
+            '>
+            Touch Line<br>-</br>Experimental Touch Line<br>-</br>(2017-11)
+            </a>
+
+            <a 
+            class="project_box"
+            onclick='
+            window.open(
+            "http://wesfar.github.io/Projects/20170923-1 - Submarine Hunter/index.html",
+            "_blank",
+            "width="+window.outerWidth+",height="+window.outerHeight+""
+            );
             '>
             Sub Hunter<br>-</br>Classic Submarine Hunter<br>-</br>(2017-09)
             </a>
