--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
             class="project_box"
             onclick='
             window.open(
+            "http://wesfar.github.io/Projects/20180415 - Air Strike/index.html",
+            "_blank",
+            "width="+window.innerWidth+",height="+window.innerHeight+""
+            );
+            '>
+            Air Strike<br>-</br>Cannoball Experiment Targeting Planes<br>-</br>(2018-05)
+            </a>
+
+            <a 
+            class="project_box"
+            onclick='
+            window.open(
             "http://wesfar.github.io/Projects/20171112-1 - Spring Experiments/index.html",
             "_blank",
             "width="+window.innerWidth+",height="+window.innerHeight+""
@@ -51,7 +63,7 @@
             Spring Experiments<br>-</br>Experimental Touch Spring<br>-</br>(2017-11)
             </a>
 
-            <a 
+           <a 
             class="project_box"
             onclick='
             window.open(
