Air Strike Folder Corrected

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             class="project_box"
             onclick='
             window.open(
-            "http://wesfar.github.io/Projects/20180415 - Air Strike/index.html",
+            "http://wesfar.github.io/Projects/20180415-1 - Air Strike/index.html",
             "_blank",
             "width="+window.innerWidth+",height="+window.innerHeight+""
             );
