--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -9,36 +9,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="Air Strike">
 
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/Assets/icon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Air Strike">
 
-	<link rel="apple-touch-startup-image" href="/Assets/icon/apple-icon.png">
+  <meta name="msapplication-TileColor" content="#2196f3">
+  <meta name="msapplication-TileImage" content="/Assets/icon/icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-	<link rel="apple-touch-icon" sizes="57x57" href="Assets/icon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="Assets/icon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="Assets/icon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="Assets/icon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="Assets/icon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="Assets/icon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="Assets/icon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="Assets/icon/apple-icon-180x180.png">
-	
-	<link rel="icon" type="image/png" sizes="192x192"  href="Assets/icon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="Assets/icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="Assets/icon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="Assets/icon/favicon-16x16.png">
-	
+  <link rel="apple-touch-startup-image" href="/Assets/icon/icon-192x192.png">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="Assets/icon/icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="Assets/icon/icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="Assets/icon/icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="Assets/icon/icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="Assets/icon/icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="Assets/icon/icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="Assets/icon/icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="Assets/icon/icon-180x180.png">
+
+  <link rel="icon" type="image/png" sizes="192x192" href="Assets/icon/icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="Assets/icon/icon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="Assets/icon/icon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="Assets/icon/icon-96x96.png">
+
   <link rel="manifest" href="manifest.json">
-  
+
   <link rel="stylesheet" href="styles.css">
 
-  
+
 </head>
 
 <body>
@@ -57,11 +57,11 @@
   <script src="vector.js"></script>
   <script src="eventlisteners.js"></script>
   <script src="image.js"></script>
-  <script src="base.js"></script>  
-  <script src="holder.js"></script>  
-  <script src="cannonball.js"></script>  
-  <script src="target.js"></script>  
-  <script src="explosion.js"></script>  
+  <script src="base.js"></script>
+  <script src="holder.js"></script>
+  <script src="cannonball.js"></script>
+  <script src="target.js"></script>
+  <script src="explosion.js"></script>
 
   <!--
   ESCOLHER SE QUERO USAR p5.js OU NÃO
