--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -3,18 +3,18 @@
 
 <head>
 
-  <title>Sub Hunter</title>
+  <title>Air Strike</title>
 	
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="Sub Hunter">
+	<meta name="apple-mobile-web-app-title" content="Air Strike">
 
-	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileColor" content="#003366">
 	<meta name="msapplication-TileImage" content="/Assets/icon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#003366">
 
 	<link rel="apple-touch-startup-image" href="/Assets/icon/apple-icon.png">
 
