Air Strike PWA 5

--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -45,6 +45,7 @@
   <canvas id="Canvas_0"></canvas>
   <canvas id="Canvas_1"></canvas>
   <canvas id="Canvas_2"></canvas>
+  <canvas id="Canvas_3"></canvas>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 
