Air Strike PWA 10

--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -12,26 +12,23 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Air Strike">
 
-	<meta name="msapplication-TileColor" content="#003366">
-	<meta name="msapplication-TileImage" content="/Assets/icon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#003366">
+	<meta name="msapplication-TileColor" content="#000080">
+	<meta name="msapplication-TileImage" content="Assets/icon/icon-144x144.png">
+	<meta name="theme-color" content="#000080">
 
-	<link rel="apple-touch-startup-image" href="/Assets/icon/apple-icon.png">
-
-	<link rel="apple-touch-icon" sizes="57x57" href="Assets/icon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="Assets/icon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="Assets/icon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="Assets/icon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="Assets/icon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="Assets/icon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="Assets/icon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="Assets/icon/apple-icon-180x180.png">
+	<link rel="apple-touch-startup-image" href="Assets/icon/icon-384x384.png">
+  
+	<link rel="apple-touch-icon" sizes="72x72" href="Assets/icon/icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="96x96" href="Assets/icon/icon-96x96.png">
+	<link rel="apple-touch-icon" sizes="128x128" href="Assets/icon/icon-128x128.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="Assets/icon/icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="192x192" href="Assets/icon/icon-192x192.png">
+	<link rel="apple-touch-icon" sizes="384x385" href="Assets/icon/icon-384x384.png">
+	<link rel="apple-touch-icon" sizes="512x512" href="Assets/icon/icon-512x512.png">
 	
-	<link rel="icon" type="image/png" sizes="192x192"  href="Assets/icon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="Assets/icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="Assets/icon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="Assets/icon/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="Assets/icon/icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="Assets/icon/icon-96x96.png">
 	
 	<link rel="manifest" href="manifest.json">
 
@@ -62,8 +59,8 @@
 
   <!--
   ESCOLHER SE QUERO USAR p5.js OU NÃO
-  SE QUISER USAR p5.js REFERENCIAR => script_p5.js
   <script src="script_p5.js"></script>
+  SE QUISER USAR p5.js REFERENCIAR => script_p5.js
 
   SE NÃO QUISER USAR p5.js REFERENCIAR => script.js
   <script src="script.js"></script>
