--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Air Strike">
 
-	<link rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">  
+	<link rel="apple-touch-startup-image" href="Assets/icon/icon-72x72.png">  
 	<link rel="apple-touch-icon" sizes="72x72" href="Assets/icon/icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="96x96" href="Assets/icon/icon-96x96.png">
 	<link rel="apple-touch-icon" sizes="128x128" href="Assets/icon/icon-128x128.png">
@@ -24,9 +24,9 @@
 	<link rel="apple-touch-icon" sizes="512x512" href="Assets/icon/icon-512x512.png">
 	
 	<meta name="msapplication-TileColor" content="#000080">
-	<meta name="msapplication-TileImage" content="Assets/icon/icon-144x144.png">
+	<meta name="msapplication-TileImage" content="Assets/icon/icon-72x72.png">
 
-	<link rel="icon" type="image/png" sizes="144x144"  href="Assets/icon/icon-144x144.png">
+	<link rel="icon" type="image/png" sizes="72x72"  href="Assets/icon/icon-72x72.png">
 	
 	<link rel="manifest" href="manifest.json">
 
