--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -7,16 +7,17 @@
 	
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
-	<meta name="theme-color" content="#000080">
 
 	<meta name="msapplication-TileColor" content="#000080">
 	<meta name="msapplication-TileImage" content="Assets/icon/icon-72x72.png">
 
 	<link rel="icon" type="image/png" sizes="72x72"  href="Assets/icon/icon-72x72.png">
 
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#000080">
   <meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Air Strike">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<link rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">  
 	<link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/icon-144x144.png">
 	
