--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-
+  <canvas id="Canvas_3"></canvas>
   <canvas id="Canvas_2"></canvas>
   <canvas id="Canvas_1"></canvas>
   <canvas id="Canvas_0"></canvas>
