--- a/20170923-1 - Submarine Hunter/index.html
+++ b/20170923-1 - Submarine Hunter/index.html
@@ -2,18 +2,17 @@
 <html>
 
 <head>
-	<title>Sub Hunter</title>
+
+  <title>Sub Hunter</title>
 	
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#ffffff">
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="Sub Hunter">
-
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/Assets/icon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
 
 	<link rel="apple-touch-startup-image" href="/Assets/icon/apple-icon.png">
 
@@ -27,6 +26,9 @@
 	<link rel="apple-touch-icon" sizes="152x152" href="Assets/icon/apple-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="Assets/icon/apple-icon-180x180.png">
 	
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/Assets/icon/ms-icon-144x144.png">
+
 	<link rel="icon" type="image/png" sizes="192x192"  href="Assets/icon/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="Assets/icon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="Assets/icon/favicon-96x96.png">
@@ -34,22 +36,9 @@
 	
 	<link rel="manifest" href="manifest.json">
 
-	<style type="text/css">
-		html, body {
-			margin: 0px;
-			background-size: cover;
-		}
+  <link rel="stylesheet" href="styles.css">
 
-		canvas {
-			display: block;
-			position: absolute;
-			top: 0px;
-			left: 0px;
-		}
-	</style>
-
-
-
+  
 </head>
 
 <body>
