--- a/20171101-1 - Touch Effects/index.html
+++ b/20171101-1 - Touch Effects/index.html
@@ -6,7 +6,8 @@
 		
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
+
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
 	<style type="text/css">
