--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
             Traversy Media
             </a>
 
+            <a 
+            class="project_box"
+            href="https://www.thenetninja.co.uk/"
+            target="_blank">
+            The Net Ninja
+            </a>
+
           </div>
         </div>
       </div>
