--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -3,28 +3,114 @@
 
 <head>
 
-  <title>Air Strike</title>
-	
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- META TAGS -->
 
-	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
-	<meta name="theme-color" content="#000080">
-  
-  <meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="Air Strike">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">  
-	<link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/icon-144x144.png">
-	
-	<meta name="msapplication-TileColor" content="#000080">
-	<meta name="msapplication-TileImage" content="Assets/icon/icon-72x72.png">
+<!-- Title -->
+<title>Air Strike</title>
 
-	<link rel="icon" type="image/png" sizes="72x72"  href="Assets/icon/icon-72x72.png">
+<!-- Must -->
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">  
+<meta name="description" content="Air Strike Game">
+<meta name="keywords" content="Air Strike Keywords">
 
-	<link rel="manifest" href="manifest.json">
+<!-- Android -->
+<meta name="theme-color" content="red">
+<meta name="mobile-web-app-capable" content="yes">
 
-  <link rel="stylesheet" href="styles.css">
+<!-- iOS -->
+<meta name="apple-mobile-web-app-capable" content="yes">                        <!-- If content is set to yes, the web application runs in full-screen mode hiding Safari User Interface Components -->
+<meta name="apple-mobile-web-app-status-bar-style" content="default">           <!-- Sets the style of the status bar for a web application. Can be "default", "black" or "black-translucent" -->
+<meta name="format-detection" content="telephone=no">                           <!-- Disables automatic detection of possible phone numbers in a webpage in Safari on iOS -->
+<meta name="apple-mobile-web-app-title" content="Air Strike">                   <!-- Specify a web application title for the launch icon. By default, the <title> tag is used -->
+
+<!-- Windows -->
+<meta name="msapplication-navbutton-color" content="red">
+<meta name="msapplication-TileColor" content="red">
+<meta name="msapplication-TileImage" content="Assets/icon/icon-72x72.png">
+<meta name="msapplication-config" content="browserconfig.xml">
+
+<!-- Pinned Sites -->
+<meta name="application-name" content="Air Strike">
+<meta name="msapplication-tooltip" content="Air Strike Tooltip Text">
+<meta name="msapplication-starturl" content="/">
+
+<!-- Tap highlighting -->
+<meta name="msapplication-tap-highlight" content="no">
+
+<!-- UC Mobile Browser -->
+<meta name="full-screen" content="yes">
+<meta name="browsermode" content="application">
+
+<!-- Disable night mode for this page -->
+<meta name="nightmode" content="disable">
+
+<!-- Fitscreen -->
+<meta name="viewport" content="uc-fitscreen=yes"/>
+
+<!-- Layout mode -->
+<meta name="layoutmode" content="fitscreen/standard">
+
+<!-- imagemode - show image even in text only mode -->
+<meta name="imagemode" content="force">
+
+<!-- Orientation -->
+<meta name="screen-orientation" content="landscape">
+
+
+<!-- LINK TAGS -->
+
+<!-- Main Link Tags -->
+<link rel="icon" type="image/png" sizes="72x72" href="Assets/icon/icon-72x72.png">
+<!--
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png">
+--!>
+
+<!-- iOS -->
+<link rel="apple-touch-icon" href="Assets/icon/icon-144x144.png">                               <!-- To specify multiple icons for different device resolutions -->
+<link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/icon-144x144.png">
+<!--
+<link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
+--!>
+
+<!-- Startup Image -->
+<link rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">                      <!-- Specify a launch screen image for iOS that is displayed while your web application launches -->
+<!--
+<link rel="apple-touch-startup-image" href="touch-icon-start-up-320x480.png">
+--!>
+
+<!-- Pinned Tab -->
+<!--
+<link rel="mask-icon" size="any" color="red" href="path/to/icon.svg" >
+--!>
+
+<!-- Android -->
+<!--
+<link rel="icon" sizes="192x192" href="icon-192x192.png">
+<link rel="icon" sizes="128x128" href="icon-128x128.png">
+--!>
+
+<!-- Others -->
+<!--
+<link rel="shortcut icon" type="image/x-icon" href="favicon.icon">
+--!>
+
+<!-- UC Browser -->
+<!--
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/icon-52x52.png">
+<link rel="apple-touch-icon" sizes="72x72" href="images/icon-72x72.png">
+--!>
+
+<!-- Manifest.json -->
+<link rel="manifest" href="/manifest.json">
+
+<!-- CSS Stylesheet -->
+<link rel="stylesheet" href="styles.css">
 
 
 </head>
