--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -5,6 +5,9 @@
 
 <!-- META TAGS -->
 
+<link rel="stylesheet" href="mycssfile?id=12345.css">
+<script src="assets/js/myjsfile.js?id=1234"></script>
+
 <!-- Title -->
 <title>Air Strike</title>
 
@@ -60,7 +63,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
 <link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png">
---!>
+-->
 
 <!-- iOS -->
 <link rel="apple-touch-icon" href="Assets/icon/icon-144x144.png">                               <!-- To specify multiple icons for different device resolutions -->
@@ -69,29 +72,29 @@
 <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
 <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
 <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
---!>
+-->
 
 <!-- Startup Image -->
 <link rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">                      <!-- Specify a launch screen image for iOS that is displayed while your web application launches -->
 <!--
 <link rel="apple-touch-startup-image" href="touch-icon-start-up-320x480.png">
---!>
+-->
 
 <!-- Pinned Tab -->
 <!--
 <link rel="mask-icon" size="any" color="red" href="path/to/icon.svg" >
---!>
+-->
 
 <!-- Android -->
 <!--
 <link rel="icon" sizes="192x192" href="icon-192x192.png">
 <link rel="icon" sizes="128x128" href="icon-128x128.png">
---!>
+-->
 
 <!-- Others -->
 <!--
 <link rel="shortcut icon" type="image/x-icon" href="favicon.icon">
---!>
+-->
 
 
 <!-- Manifest.json -->
