PWA is this it?

--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -5,9 +5,6 @@
 
 <!-- META TAGS -->
 
-<link rel="stylesheet" href="mycssfile?id=12345.css">
-<script src="assets/js/myjsfile.js?id=1234"></script>
-
 <!-- Title -->
 <title>Air Strike</title>
 
@@ -132,6 +129,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 
+  <script src="cacheupdate.js"></script>
   <script src="canvas.js"></script>
   <script src="utils.js"></script>
   <script src="vector.js"></script>
