--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -115,6 +115,9 @@
 <!-- Manifest.json -->
 <link rel="manifest" href="/manifest.json">
 
+<!-- Manifest for iOS -->
+<html manifest="/manifest_iOS.manifest"></html>
+
 <!-- CSS Stylesheet -->
 <link rel="stylesheet" href="styles.css">
 
