--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -130,9 +130,17 @@
   <canvas id="Canvas_2"></canvas>
   <canvas id="Canvas_3"></canvas>
 
+<!-- p5.js CDN -->
+<!--
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+-->
 
+<!--
   <script src="cacheupdate.js"></script>
+-->
+
+
+  <script src="p5.js"></script>
   <script src="canvas.js"></script>
   <script src="utils.js"></script>
   <script src="vector.js"></script>
