--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -113,10 +113,12 @@
 
 
 <!-- Manifest.json -->
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="manifest.json">
 
 <!-- Manifest for iOS -->
+<!--
 <html manifest="/manifest_iOS.manifest"></html>
+-->
 
 <!-- CSS Stylesheet -->
 <link rel="stylesheet" href="styles.css">
@@ -141,6 +143,7 @@
 
 
   <script src="p5.js"></script>
+  <script src="service-worker.js"></script>
   <script src="canvas.js"></script>
   <script src="utils.js"></script>
   <script src="vector.js"></script>
