--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -121,11 +121,14 @@
 <!-- CSS Stylesheet -->
 <link rel="stylesheet" href="styles.css">
 
+<!-- Other TAGSs -->
+<!--
 <meta http-equiv="cache-control" content="max-age=0" />
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="expires" content="0" />
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
+-->
 
 </head>
 
